# 13_fashion_log_reg

./: .gitignore  CMakeLists.txt  README.md  global.h  input_data.h  main.cpp  prediction.h  result.h
.github/workflows/: release.yml
